gitops/default/cd-lna/manifests/cd-lna.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd-lna
spec:
  selector:
    matchLabels:
      app: cd-lna
  template:
    metadata:
      labels:
        app: cd-lna
    spec:
      containers:
      - name: cd-lna
        image: docker.io/svenstaro/miniserve:0.35.0
        args:
          - "--enable-tar"
          - "--enable-tar-gz"
          - "--compress-response"
          - "--dirs-first"
          - "--hide-version-footer"
          - "--qrcode"
          - "--verbose"
          - "/tmp"
        readinessProbe:
          httpGet:
            path: /__miniserve_internal/healthcheck
            port: 8080
        livenessProbe:
          httpGet:
            path: /__miniserve_internal/healthcheck
            port: 8080
        volumeMounts:
        - name: cd-lna
          mountPath: /tmp/cd-lna
          readOnly: true
      volumes:
      - name: cd-lna
        persistentVolumeClaim:
            claimName: cd-lna-files
---
apiVersion: v1
kind: Service
metadata:
  name: cd-lna
spec:
  selector:
    app: cd-lna
  ports:
  - port: 8080
    targetPort: 8080
    name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cd-lna
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: cd-lna.dixneuf19.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd-lna
            port:
              name: web
  tls:
  - hosts:
    - cd-lna.dixneuf19.fr
    secretName: cd-lna-dixneuf19-fr-tls
